# clucene

./: .gitattributes  .gitignore  CMakeLists.txt  COPYING  ChangeLog  Doxyfile.cmake  Doxyfile.in  HACKING  INSTALL  Jamfile  Jamfile.v2  Makefile.am  Makefile.in  README  REQUESTS  aclocal.m4  autogen.sh  config.h.tmp.in  configure  configure.ac  dist-test.sh
src/: CLucene.h  Makefile.am  Makefile.in
src/CLucene/: CLConfig.h  CLMonolithic.cpp  CMakeLists.txt  LuceneThreads.h  Makefile.am  StdHeader.cpp  StdHeader.h  _ApiHeader.h  _clucene-config.h.cmake  clucene-config.h.cmake  files_list.txt
src/CLucene/analysis/: AnalysisHeader.cpp  AnalysisHeader.h  Analyzers.cpp  Analyzers.h  Makefile.am
src/CLucene/config/: CompilerBcb.h  CompilerGcc.h  CompilerMsvc.h  Makefile.am  _threads.h  compiler.h  gunichartables.cpp  repl_tchar.h  repl_tcslwr.cpp  repl_tcstod.cpp  repl_tcstoll.cpp  repl_tprintf.cpp  threads.cpp  utf8.cpp
src/CLucene/debug/: Makefile.am  _condition.h  condition.cpp  error.cpp  error.h  lucenebase.h  mem.h
src/CLucene/document/: DateField.cpp  DateField.h  DateTools.cpp  DateTools.h  Document.cpp  Document.h  Field.cpp  Field.h  Makefile.am
src/CLucene/index/: CompoundFile.cpp  CompoundFile.h  DocumentWriter.cpp  DocumentWriter.h  FieldInfos.cpp  FieldInfos.h  FieldsReader.cpp  FieldsReader.h  FieldsWriter.cpp  FieldsWriter.h  IndexFileNames.cpp  IndexFileNames.h  IndexModifier.cpp  IndexModifier.h  IndexReader.cpp  IndexReader.h  IndexWriter.cpp  IndexWriter.h  Makefile.am  MultiReader.cpp  MultiReader.h  Payload.cpp  Payload.h  SegmentHeader.h  SegmentInfos.cpp  SegmentInfos.h  SegmentMergeInfo.cpp  SegmentMergeInfo.h  SegmentMerger.cpp  SegmentMerger.h  SegmentReader.cpp  SegmentTermDocs.cpp  SegmentTermEnum.cpp  SegmentTermEnum.h  SegmentTermPositions.cpp  SegmentTermVector.cpp  Term.cpp  Term.h  TermInfo.cpp  TermInfo.h  (+19 more)
src/CLucene/queryParser/: Lexer.cpp  Lexer.h  Makefile.am  MultiFieldQueryParser.cpp  MultiFieldQueryParser.h  QueryParser.cpp  QueryParser.h  QueryParserBase.cpp  QueryParserBase.h  QueryToken.h  TokenList.cpp  _TokenList.h
src/CLucene/search/: BooleanClause.h  BooleanQuery.cpp  BooleanQuery.h  BooleanScorer.cpp  BooleanScorer.h  BooleanScorer2.cpp  BooleanScorer2.h  CachingWrapperFilter.cpp  CachingWrapperFilter.h  ChainedFilter.cpp  Compare.h  ConjunctionScorer.cpp  ConjunctionScorer.h  DateFilter.cpp  DateFilter.h  DisjunctionSumScorer.cpp  DisjunctionSumScorer.h  ExactPhraseScorer.cpp  ExactPhraseScorer.h  Explanation.cpp  Explanation.h  FieldCache.h  FieldCacheImpl.cpp  FieldDoc.h  FieldDocSortedHitQueue.cpp  FieldDocSortedHitQueue.h  FieldSortedHitQueue.cpp  FieldSortedHitQueue.h  Filter.h  FilteredTermEnum.h  FuzzyQuery.cpp  FuzzyQuery.h  HitQueue.cpp  Hits.cpp  Hits.h  IndexSearcher.cpp  IndexSearcher.h  Makefile.am  MultiSearcher.cpp  MultiSearcher.h  (+39 more)
src/CLucene/store/: Directory.cpp  Directory.h  FSDirectory.cpp  FSDirectory.h  IndexInput.cpp  IndexInput.h  IndexOutput.cpp  IndexOutput.h  Lock.cpp  Lock.h  LockFactory.cpp  LockFactory.h  MMapInput.cpp  Makefile.am  OutputStream.h  RAMDirectory.cpp  RAMDirectory.h  TransactionalRAMDirectory.cpp  TransactionalRAMDirectory.h  _Lock.h  _MMap.h  _RAMDirectory.h  _TransactionalRAMDirectory.h
src/CLucene/util/: Array.h  Arrays.h  BitSet.cpp  BitSet.h  Equators.cpp  Equators.h  FastCharStream.cpp  MD5Digester.cpp  MD5Digester.h  Makefile.am  Misc.cpp  Misc.h  PriorityQueue.h  Reader.cpp  Reader.h  ScorerDocQueue.cpp  ScorerDocQueue.h  StringBuffer.cpp  StringBuffer.h  StringIntern.cpp  ThreadLocal.cpp  ThreadLocal.h  VoidList.h  VoidMap.h  VoidMapSetDefinitions.h  _Array.h  _StringBuffer.h  _ThreadLocal.h  _VoidMap.h  _dirent.h  bufferedstream.h  dirent.cpp  fileinputstream.h  googlesparsemap.h  inputstreambuffer.h  jstreamsconfig.h  streambase.h
src/contribs/: CMakeLists.txt
src/contribs-lib/: CMakeLists.txt
src/contribs/benchmarker/: Benchmarker.cpp  Benchmarker.h  CMakeLists.txt  Main.cpp  TestCLString.cpp  TestCLString.h  Timer.h  Unit.cpp  Unit.h  stdafx.cpp  stdafx.h
src/contribs/contribs-lib-test/: CMakeLists.txt  TestAnalysis.cpp  TestHighlight.cpp  TestSnowball.cpp  TestStreams.cpp  TestUtf8.cpp  contribTests.cpp  test.h  testall.cpp
src/core/: CLucene.h  CMakeLists.txt  files_list.txt  libclucene.pc.cmake
src/core/CLucene/: CLConfig.h  CLMonolithic.cpp  LuceneThreads.h  StdHeader.cpp  StdHeader.h  files_list.txt
src/demo/: CMakeLists.txt  IndexFiles.cpp  Jamfile.v2  Main.cpp  Makefile.am  Makefile.in  SearchFiles.cpp  Statistics.cpp  config.h.cmake  dirent.cpp  dirent.h  stdafx.cpp  stdafx.h
src/ext/: CMakeLists.txt
src/ext/zlib/: _zlib.h  _zutil.h  adler32.c  crc32.c  inffast.c  inftrees.c  zutil.c
src/htdocs/: _footer.html  download.shtml  index.shtml
src/shared/: CMakeLists.txt  README
src/shared/CLucene/: CLSharedMonolithic.cpp  LuceneThreads.h  SharedHeader.cpp  SharedHeader.h  _SharedHeader.h  _clucene-config.h.cmake  clucene-config.h.cmake
src/shared/cmake/: CheckErrorHandling.cmake  CheckFloatByte.cmake  CheckFloatByte.cpp.in  CheckHashmaps.cmake  (+16 more)
src/test/: CLMonolithic_Test.cpp  CMakeLists.txt  CuTest.cpp  CuTest.h  test.h  testall.cpp  tests.cpp
test/: CLMonolithic_Test.cpp  CMakeLists.txt  CuTest.cpp  CuTest.h  Jamfile.v2  Makefile.am  Makefile.in  test.h  testall.cpp  tests.cpp
test/analysis/: Makefile.am  TestAnalysis.cpp  TestAnalyzers.cpp
test/data/: Makefile.am  Makefile.in  StopWords.test  readme.txt
test/debug/: Makefile.am  TestError.cpp
test/document/: Makefile.am  TestDocument.cpp
test/index/: Makefile.am  TestIndexWriter.cpp  TestReuters.cpp  TestUtf8.cpp
test/queryParser/: Makefile.am  TestQueryParser.cpp
test/search/: Makefile.am  TestDateFilter.cpp  TestForDuplicates.cpp  TestQueries.cpp  TestSearch.cpp  TestSort.cpp  TestTermVector.cpp  TestWildcard.cpp
test/store/: Makefile.am  TestStore.cpp
test/util/: English.cpp  Makefile.am  TestPriorityQueue.cpp
win32/: CLucene.sln  CLucene.vcproj  Makefile.am  Makefile.in  demo.dsp  demo.dsw  demo.sln  demo.vcproj  test.dsp  test.dsw  test.sln  test.vcproj
(+515 files in other folders)
