## Makefile.am -- Process this file with automake to produce Makefile.in

win32srcdir = $(top_srcdir)/win32

EXTRA_DIST = $(win32srcdir)/*.dsp \
			 $(win32srcdir)/*.dsw \
			 $(win32srcdir)/*.vcproj \
			 $(win32srcdir)/*.sln

MAINTAINERCLEANFILES = *.suo Makefile.in

DISTCLEANFILES =

MOSTLYCLEANFILES = *.plg *.ncb *.opt
